[package]
name = "gluc-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde_json = "1.0.111"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
